added cobertura code coverage plugin
git-svn-id: https://lwes.svn.sourceforge.net/svnroot/lwes/lwes-journaller-java/trunk@109 a2f82657-cdd2-4550-bd36-68a8e7111808

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.3</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>               
+            </plugin>
         </plugins>
     </build>
     <repositories>
