--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.lwes</groupId>
     <artifactId>lwes-journaller-java</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
     <name>lwes-journaller-java</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.lwes</groupId>
             <artifactId>lwes-java</artifactId>
-            <version>0.1.1</version>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
