--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.lwes</groupId>
     <artifactId>lwes-journaller-java</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.6</version>
     <name>lwes-journaller-java</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.lwes</groupId>
             <artifactId>lwes-java</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -106,6 +106,14 @@
                         <descriptor>src/assemble/distribution.xml</descriptor>
                     </descriptors>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>assembly</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -116,5 +124,24 @@
             <url>http://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>emma-maven-plugin</artifactId>
+              <version>1.0-alpha-2</version>
+              <inherited>true</inherited>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
