--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>site</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>assembly</goal>
                         </goals>
