--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>0.20.1-169.56</version>
+            <version>0.20.2-cdh3u0</version>
         </dependency>
     </dependencies>
     <build>
