--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <name>lwes-journaller-java</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <scm>
         <connection>scm:git:git@github.com:lwes/lwes-journaller-java.git</connection>
     </scm>
@@ -67,6 +71,7 @@
             <version>0.20.2-cdh3u0</version>
         </dependency>
     </dependencies>
+
     <build>
         <resources>
             <resource>
@@ -86,6 +91,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <excludes>
                         <exclude>*.xml</exclude>
@@ -97,12 +103,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -155,6 +163,11 @@
             <id>central</id>
             <name>Maven central repository</name>
             <url>http://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+          <id>cloudera</id>
+          <name>cloudera</name>
+          <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
         </repository>
     </repositories>
     <reporting>
