--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <!-- This section is here so we can publish to central
    <parent>
@@ -13,7 +12,7 @@
     <groupId>org.lwes</groupId>
     <artifactId>lwes-journaller-java</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>lwes-journaller-java</name>
     <description>An LWES Journaller written in Java</description>
     <url>http://lwes.org</url>
@@ -38,7 +37,8 @@
         <connection>scm:git:git@github.com:lwes/lwes-journaller-java.git</connection>
         <developerConnection>scm:git:git@github.com:lwes/lwes-journaller-java.git</developerConnection>
         <url>https://github.com/lwes/lwes-journaller-java</url>
-    </scm>
+      <tag>lwes-journaller-java-1.1.0</tag>
+  </scm>
 
     <developers>
         <developer>
@@ -222,8 +222,7 @@
                         <configuration>
                             <finalName>dejournaller-${project.version}</finalName>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.lwes.journaller.DeJournaller</mainClass>
                                 </transformer>
                             </transformers>
